<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.MoviePosterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/fragment_movie_poster_iv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_medium_16dp"
            app:layout_constraintDimensionRatio="1:1.4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.7" />

        <TextView
            android:id="@+id/fragment_movie_poster_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_16dp"
            android:gravity="center"
            android:text="@string/movie_poster_title"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_sub_title_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_movie_poster_iv" />

        <ImageView
            android:id="@+id/fragment_movie_poster_slider_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small_8dp"
            android:src="@drawable/movie_poster_img_slider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_movie_poster_title_tv" />

        <TextView
            android:id="@+id/fragment_movie_poster_info_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small_8dp"
            android:gravity="center"
            android:text="@string/movie_poster_info"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_large_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_movie_poster_slider_iv" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/fragment_movie_poster_detail_view_cpbtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_16dp"
            android:background="@drawable/movie_poster_layout_background_round_solid_orange"
            android:text="@string/movie_poster_detail_view"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_sub_title_20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_movie_poster_info_tv"
            app:layout_constraintWidth_percent="0.33" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>